# iree

./: .gitmodules  CMakeLists.txt  SUBMODULE_VERSIONS.txt
build_tools/cmake/: iree_copts.cmake
iree/compiler/Codegen/: CMakeLists.txt  Passes.h
iree/compiler/Codegen/LLVMCPU/: KernelDispatch.cpp  LLVMCPUVectorization.cpp
iree/compiler/Codegen/LLVMHB/: CMakeLists.txt  Passes.cpp
iree/compiler/Codegen/Sandbox/: LinalgTensorCodegenDriver.cpp
iree/compiler/Dialect/Flow/Transforms/: BUILD  CMakeLists.txt  DispatchLinalgOnTensors.cpp  MamulToMMT4DConversion.cpp  Passes.cpp  Passes.h  Passes.td
iree/compiler/Dialect/Flow/Transforms/test/: BUILD  matmul_to_mmt4d.mlir
iree/hal/drivers/: CMakeLists.txt  init.c
iree/hal/hammerblade/: CMakeLists.txt  api.h  context_wrapper.h  descriptor_set_layout.c  descriptor_set_layout.h  event_semaphore.c  event_semaphore.h  executable_layout.c  executable_layout.h  graph_command_buffer.c  graph_command_buffer.h  hb_allocator.c  hb_allocator.h  hb_buffer.c  hb_buffer.h  hb_device.c  hb_device.h  hb_driver.c  hb_event.c  hb_event.h  hb_headers.h  native_executable.c  native_executable.h  nop_executable_cache.c  nop_executable_cache.h  status_util.c  status_util.h  stream_command_buffer.c  stream_command_buffer.h
iree/hal/hammerblade/registration/: BUILD  CMakeLists.txt  driver_module.c  driver_module.h
iree/samples/rv_kernels/riscv_add/: CMakeLists.txt  README.md  riscv_add.mlir  riscv_add_demo.c
iree/samples/rv_kernels/riscv_mul/: CMakeLists.txt  README.md  riscv_mul.mlir  riscv_mul_demo.c
iree/samples/rv_kernels/riscv_relu/: CMakeLists.txt  README.md  riscv_relu.mlir  riscv_relu_demo.c
iree/samples/rv_kernels/riscv_sigmoid/: CMakeLists.txt  README.md  riscv_sigmoid.mlir  riscv_sigmoid_demo.c
iree/samples/rv_kernels/riscv_sub/: CMakeLists.txt  riscv_sub.mlir  riscv_sub_demo.c
iree/samples/rv_kernels/riscv_sum/: CMakeLists.txt  README.md  riscv_sum.mlir  riscv_sum_demo.c
iree/samples/rv_kernels/riscv_tanh/: CMakeLists.txt  README.md  riscv_tanh.mlir  riscv_tanh_demo.c
iree/samples/rv_kernels/riscv_transpose/: CMakeLists.txt  README.md  riscv_transpose.mlir  riscv_transpose_demo.c
iree/schemas/: CMakeLists.txt  hammerblade_executable_def.fbs
iree/test/e2e/xla_ops/: dot.mlir
iree/tools/: CMakeLists.txt  init_targets.cc
